@@ -1,10 +1,14 @@
 package org.jenkinsci.jira;
 
+import com.atlassian.jira.rest.client.api.JiraRestClient;
+import com.atlassian.jira.rest.client.internal.async.AsynchronousJiraRestClientFactory;
 import hudson.plugins.jira.soap.JiraSoapService;
 import hudson.plugins.jira.soap.JiraSoapServiceServiceLocator;
 
 import javax.xml.rpc.ServiceException;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
@@ -14,8 +18,9 @@ public class JIRA {
     /**
      * Connects to the confluence server.
      */
-    public static JiraSoapService connect(URL jiraUrl) throws IOException, ServiceException {
-        JiraSoapServiceServiceLocator loc = new JiraSoapServiceServiceLocator();
-        return loc.getJirasoapserviceV2(new URL(jiraUrl,"rpc/soap/jirasoapservice-v2"));
+    public static JiraRestClient connect(URL jiraUrl, String username, String password) throws IOException {
+        return new AsynchronousJiraRestClientFactory()
+                .createWithBasicHttpAuthentication(URI.create(jiraUrl.toExternalForm()), username, password);
+
     }
 }
